--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://developer-t2.github.io/learn-twitter"
+  "homepage": "https://developer-t2.github.io/twitter-clone"
 }
